--- a/blessings.tex
+++ b/blessings.tex
@@ -188,7 +188,8 @@ v’tzivanu al achilat maror.}
 	
 	This is the Cup of Miriam, the cup of living waters. Let us remember the Exodus from Egypt. These are the living waters, God’s gift to Miriam, which gave new life to Israel as we struggled with ourselves in the wilderness. Blessed are You God, Who brings us from the narrows into the wilderness, sustains us with endless possibilities, and enables us to reach a new place.”
 	}
-\newcommand{\NirtzahBlessing}{\largehebrew{לשָּ נהְָּּ הַ באָּ ּה ביִ רושָּ לי ָּ ִםְּ}\\
+\newcommand{\NirtzahBlessing}{\centering \color{darkblue} \largehebrew{לְשָׁנָה הַבָּאָה בִּירוּשָלָיִם}\\
 	L’shana haba-ah biy’rushalayim\\
-	NEXT YEAR IN JERUSALEM!\\}
+	\color{black} příští rok v Jeruzalémě\\
+	\color{midblue} NEXT YEAR IN JERUSALEM!\\}
 
