--- a/couching.tex
+++ b/couching.tex
@@ -23,8 +23,7 @@
 \newcommand{\contentsTranslation}{}
 % 
 \newcommand{\Neirot}{
-	{\noindent \textit{Protože je šabat, přeskočíme tuto část, dokud slunce nezapadne.}}
-	\\{\noindent\color{midblue} \textit{We normally begin after Havdalah by lighting the festival candles, but today we will start the Seder before sunset so we finish in time to sleep.}}
+	{\noindent \textit{Protože je šabat, přeskočíme tuto část, dokud slunce nezapadne.}} \vspace*{2ex}\\{\noindent\color{midblue} \textit{We normally begin after Havdalah by lighting the festival candles, but today we will start the Seder before sunset so we finish in time to sleep.}}
 	\CandlesBlessingHeb
 	\textit{\CandlesBlessingTlit}
 	\begin{multicols}{2}
@@ -85,69 +84,79 @@
 }
 %
 \newcommand{\MaNishtana}{
-	{\onehalfspacing
-	\centering \color{black}Ty čtyři otázky z Talmudu\\
-	\textit{\noindent\color{midblue}We take turns to read these questions}\par
-	{\color{darkblue} \MaNishtanaHeb \\
-	\textit{\MaNishtanaTlit} \\
-	{\color{midblue} \MaNishtanaEng} \\
-	{\color{black} \MaNishtanaCz}\\ 
-	\par
-	\vspace*{4ex}
-	\\
-	\LARGE 1. \\ \raggedleft 
-	\vspace*{2ex}
-	\MaNishtanaHebi \\
-	\vspace*{1mm}
-	\textit{\MaNishtanaTliti} \\ {\color{midblue} \MaNishtanaEngi}\\ {\textcolor{black} \MaNishtanaCzi} \\ \raggedright 
-	\vspace*{2ex}
-	\MaNishtanaHebib \\
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitib} \\{\color{midblue} \MaNishtanaEngib} \\ {\color{black} \MaNishtanaCzib} \\ \raggedright
-	\par
-	\\ \centering
-	\LARGE 2.\\ \raggedleft 
-	\vspace*{1mm}
-	\MaNishtanaHebii \\ 
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitii} \\ {\color{midblue} \MaNishtanaEngii} \\ {\textcolor{black} \MaNishtanaCzii} \\ \raggedright 
-	\vspace*{2ex}
-	\MaNishtanaHebiib \\ 
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitiib} \\ {\color{midblue} \MaNishtanaEngiib} \\ {\color{black} \MaNishtanaCziib} \\
-	\raggedright 
-	\par
-	\\ \centering
-	\LARGE 3.\\ \raggedleft 
-	\vspace*{1mm}
-	\MaNishtanaHebiii \\
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitiii} \\{\color{midblue} \MaNishtanaEngiii} \\ {\color{black}\MaNishtanaCziii} \\ \raggedright 
-	\vspace*{2ex}
-	\MaNishtanaHebiiib\\ 
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitiiib} \\{\color{midblue} \MaNishtanaEngiiib} \\ {\color{black} \MaNishtanaCziiib} \\
-	\raggedright 
-	\par
-	\\ \centering
-	\LARGE 4.\\ \raggedleft 
-	\vspace*{1mm}
-	\MaNishtanaHebiv\\
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitiv} \\ {\color{midblue} \MaNishtanaEngiv} \\ {\color{black}\MaNishtanaCziv} \\ \raggedright 
-	\vspace*{2ex}
-	\MaNishtanaHebivb \\ 
-	\vspace*{1mm}
-	\textit{\MaNishtanaTlitivb} \\{\color{midblue} \MaNishtanaEngivb} \\ {\color{black} \MaNishtanaCzivb} \\
-	\par
-	}}
-	\\
-	\vspace{2ex}
-	\begin{multicols}{2}
-		\MaNishtanaAnswerCz
-		
-		\columnbreak \MaNishtanaAnswerEng
-	\end{multicols}
+	{\doublespacing
+		\vspace*{2ex}
+		\centering \color{black}Ty čtyři otázky z Talmudu\\
+		\vspace*{2ex}
+		\textit{\noindent\color{midblue}We take turns to read these questions}\par
+		\vspace*{2ex}
+		\vspace*{2ex}
+		{\color{darkblue} \MaNishtanaHeb \\ \vspace*{1mm}
+		\textit{\MaNishtanaTlit} \\
+		{\color{midblue} \MaNishtanaEng} \\
+		{\color{black} \MaNishtanaCz}\\ 
+		\par
+		\vspace*{4ex}
+		\\
+		\onecolumn
+		\LARGE 1. \\ \raggedleft 
+		\vspace*{2ex}
+		\MaNishtanaHebi \\
+		\vspace*{1mm}
+		\textit{\MaNishtanaTliti} \\ {\color{midblue} \MaNishtanaEngi}\\ {\textcolor{black} \MaNishtanaCzi} \\ \raggedright 
+		\vspace*{2ex}
+		\MaNishtanaHebib \\
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitib} \\{\color{midblue} \MaNishtanaEngib} \\ {\color{black} \MaNishtanaCzib} \\ \raggedright
+		\par
+		\vspace*{4ex}
+		\\ \centering
+		\LARGE 2.\\ \raggedleft 
+		\vspace*{1mm}
+		\MaNishtanaHebii \\ 
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitii} \\ {\color{midblue} \MaNishtanaEngii} \\ {\textcolor{black} \MaNishtanaCzii} \vspace*{2ex} \\ \raggedright 
+		\vspace*{2ex}
+		\MaNishtanaHebiib \\ 
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitiib} \\ {\color{midblue} \MaNishtanaEngiib} \\ {\color{black} \MaNishtanaCziib} \\
+		\raggedright 
+		\par
+		\vspace*{4ex}
+		\\ \centering
+		\LARGE 3.\\ \raggedleft 
+		\vspace*{1mm}
+		\MaNishtanaHebiii \\
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitiii} \\{\color{midblue} \MaNishtanaEngiii} \\ {\color{black}\MaNishtanaCziii} \vspace*{2ex} \\ \raggedright 
+		\vspace*{2ex}
+		\MaNishtanaHebiiib\\ 
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitiiib} \\{\color{midblue} \MaNishtanaEngiiib} \\ {\color{black} \MaNishtanaCziiib} \\
+		\raggedright 
+		\par
+		\vspace*{4ex}
+		\onecolumn
+		\\ \centering
+		\LARGE 4.\\ \raggedleft 
+		\vspace*{1mm}
+		\MaNishtanaHebiv\\
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitiv} \\ {\color{midblue} \MaNishtanaEngiv} \\ {\color{black}\MaNishtanaCziv} \vspace*{2ex} \\ \raggedright 
+		\vspace*{2ex}
+		\MaNishtanaHebivb \\ 
+		\vspace*{1mm}
+		\textit{\MaNishtanaTlitivb} \\{\color{midblue} \MaNishtanaEngivb} \\ {\color{black} \MaNishtanaCzivb} \\
+		\par
+		\vspace*{4exex}
+		}}
+		\\
+		\vspace{2ex}
+		\begin{multicols}{2}
+			\MaNishtanaAnswerCz
+			
+			\columnbreak \MaNishtanaAnswerEng
+		\end{multicols}
 }
 
 \newcommand{\ArbaAh}{
@@ -197,8 +206,8 @@
 		\columnbreak 
 		\PromiseToastEng
 	\end{multicols}
-	\centering\textit{now put the glass down without drinking}\\
-}
+	\centering\textit{now put the glass down without drinking.\\}
+	\color{midblue} \raggedright It took many generations, the story of Joseph and his brothers finding a new home in a foreign land in a time of famine and personal hardship, and much serendipity, for the Israelites to find themselves in Egypt. During this time, the King became concerned enough about the population demographics that he forced our ancestors to toil on his behalf and ordered all newborn boys killed in the Israelite camp. It then took Moses, drawn out of the water by Pharoah's daughter decades of running away -like Jonah - and an encounter with a mysterious burning bush and rod-turned-snake to do anything about it. The story of the Jewish people doesn't always make sense in the moment, and neither do our lives, but during Pesach we see a cycle turn from suffering to joy and freedom, and we find hope that this cycle will prevail in our lives and in the world}\\
 \newcommand{\Plagues}{
 	\noindent\color{midblue} G-d brought about 10 Plagues upon the Egyptians in Egypt:\\
 	\color{black} Deset ran přivedl Buh –  na Egypťany v Egyptě:\\
@@ -230,13 +239,12 @@
 	
 \newcommand{\Gamliel}{
 	\vspace*{2ex}
-	\RabbiGamliel
-	\vspace*{2ex}
-	\onecolumn
+	\RabbiGamliel}
+\newcommand{\EveryGeneration}{
 	\EveryGenerationText
-	
-	We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend this Pesach Seder together. May we arrive at future holidays in peace and happiness.
-	}
+
+We remember how G-d redeemed our ancestors from Egypt, and enabled us to spend this Pesach Seder together. May we arrive at future holidays in peace and happiness.
+}
 %
 \newcommand{\NetilatYadayim}{
 	\textit{Dále si umyjeme ruce s požehnáním \\ {\color{midblue} pour water three times on your right hand then three times on your left hand and then read:}}\\
@@ -336,7 +344,7 @@ history into a sweet celebration. \\ We recognize this by dipping our bitter hor
 \MiriamBlessing}
 
 \newcommand{\Nirtzah}{
-	As we conclude our Seder, we think about the following year with all its ups, downs and opportunities, and consider how we can bring sweetness to any bitterness we encounter, how we can give and be held by community, and how we will change and grow while retaining the promises, responsibilities and blessings of being Jewish. And either in a literal or a symbolic sense, where Jerusalem signifies a hope for a warm, loving and peaceful community of friends and family, we all raise a glass and toast together: \par
+	As we conclude our Seder, we think about the following year with all its ups, downs and opportunities, and consider how we can bring sweetness to any bitterness we encounter, how we can give and be held by community, and how we will change and grow while retaining the promises, responsibilities and blessings of being Jewish. \vspace*{2ex} \\ Either in a literal or a symbolic sense, where Jerusalem signifies a hope for a warm, loving and peaceful community of friends and family, we all raise a glass and toast together: \par
 	\NirtzahBlessing}
 % File paths: we don't use symlinks as (a) not all platforms support them, and
 % (b) they don't fit nicely with the flow we're using.
