--- a/titlepage.sty
+++ b/titlepage.sty
@@ -13,32 +13,32 @@
 \definecolor{midblue}{RGB}{23,85,142}
 \definecolor{darkblue}{RGB}{0,51,102}
 
-\newcommand{\titlePage}[4]{
-  % typeset the title page for liturgy booklets
-  % First argument is title, second subtitle, third series heading, fourth image file
-  \thispagestyle{empty}
-  \frontmatter
-  {  ~\vspace{\TPpreseriesskip}
+%\newcommand{\titlePage}[4]{
+%  % typeset the title page for liturgy booklets
+%  % First argument is title, second subtitle, third series heading, fourth image file
+%  \thispagestyle{empty}
+%  \frontmatter
+%  {  ~\vspace{\TPpreseriesskip}
 
-    {\noindent\huge #1}\centering
+%    {\noindent\huge #1}\centering
 
-    \vspace{\TPpretitleskip}
+%    \vspace{\TPpretitleskip}
 
-    {\noindent\HUGE #2}\centering
+ %   {\noindent\HUGE #2}\centering
 
-    \vspace{\TPpresubtitleskip}
+  %  \vspace{\TPpresubtitleskip}
 
-    {\noindent\LARGE #3}\centering
+   % {\noindent\LARGE #3}\centering
 
-    \vfill
+ %   \vfill
 
-    \noindent\includegraphics[width=0.4\linewidth]{#4}\centering
+  %  \noindent\includegraphics[width=0.4\linewidth]{#4}\centering
 
 
-    \cleardoublepage
-    \pagenumbering{arabic}
+ %   \cleardoublepage
+ %   \pagenumbering{arabic}
 
-  }}
+ % }}
 
 \newcommand{\ContentsTabular}{	
 	\begin{center}
