--- a/haggadah.tex
+++ b/haggadah.tex
@@ -6,7 +6,6 @@
 % Packages
 \usepackage[nobottomtitles]{titlesec}
 \usepackage{microtype}
-\usepackage[yyyymmdd,hhmmss]{datetime}
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{changepage}
@@ -34,11 +33,23 @@
 
 % Config
 \copypagestyle{versionplain}{plain}
-\newcommand{\version}{\tiny Release: v1.0.0 (template v2.3.0)}
-\makeevenfoot{versionplain}{\thepage}{}{\version}
-\makeoddfoot{versionplain}{\version}{}{\thepage}
-\pagestyle{versionplain}
-\thispagestyle{empty}
+\usepackage{fancyhdr}% http://ctan.org/pkg/fancyhdr
+\makeatletter
+\fancypagestyle{mypagestyle}{%
+	\fancyhf{}% Clear header/footer
+	\fancyfoot[C]{\textcolor{white}{\thepage}}% Page # in middle/centre of footer
+	\renewcommand{\headrulewidth}{.4pt}% .4pt header rule
+	\def\headrule{{\if@fancyplain\let\headrulewidth\plainheadrulewidth\fi
+			\color{white}\hrule\@height\headrulewidth\@width\headwidth \vskip-\headrulewidth}}
+	\renewcommand{\footrulewidth}{0pt}% No footer rule
+}
+\makeatother
+\pagestyle{mypagestyle}
+%\makeevenfoot{versionplain}{\thepage}{}{\version}
+%\makeoddfoot{versionplain}{\version}{}{\thepage}
+%\pagestyle{versionplain}
+%\pagestyle{plain}
+%\thispagestyle{empty}
 % =========
 % per-document styling: we don't set this in `styling.sty' as we might want
 % different layouts.
@@ -71,33 +82,64 @@
 
 
 \begin{document}
+
 \includegraphics[width=\textwidth]{smallstarscover.png}
 
 \vspace*{-100ex}  % Tune this to the image height.
 \begin{center}
-	\noindent \HUGE \color{cyan} Haggadah\centering
+	\noindent \HUGE \color{cyan} \texthebrew{הַגָּדָה} \centering
 	\vfill
-	\end{center}
+\end{center}
 \vspace*{80ex}  % The spacing above but without the minus.
 %
 \onecolumn
-blorb
+
+{\color{cyan} \rule{\linewidth}{0.5mm}}
+
+\vfill
+%
+Typeset by Sarah Morris in various fonts all in a panic at all hours of the night because she really loves Jan.  \\
+Translation Sources available on her Github: Sherbetfr0g
+%actually that's a lie she didn't compile them yet but is hoping nobody looks
+%Translations from MyJewishLearning.com, Danielle and Misha Slutsky at %\url{https://www.recustom.com/clips/4063687}, .SOURCES, and my own.
+
+% 
+%The latest version of this booklet can be found at
+%\url{ https://github.com/ }. Comments?
+Suggestion? Found a mistake? Open an issue in the repository or whack her with a leek.
+% 
+
+%{\centering\footnotesize\texttt{Compositum \today\ hora \currenttime}\par}
 \onecolumn
 %
+
 \section{Introduction}
-{Why do we do the seder?}\\
+{\vspace*{-2ex} \color{midblue}This Seder is designed to be used as a guide only - many sections are shown in multiple languages so that participants can understand, regardless of mother tongue. The suggestion is to read the black text (Czech) in the interlinear translations - Hebrew and English will be shown in blue for this reason.
+\vspace*{2ex}\\
+Some sections have side-by-side columnar translations, and these may either be read quietly or one section may be chosen. In many instances, it will be possible to skip to the blessings in Hebrew, and ignore other text which is not in italics.
+\vspace*{2ex}\\
+Italicised text tends to be instructional, either directions for how to participate in rituals or transliteration of the Hebrew Square Script.
+\vspace*{2ex}\\ \color{black}
+Here is a graphic of a Seder Plate with all the individual parts to help you set up the table before you begin. You will also need:
+\begin{itemize}
+\item Plenty of grape juice/wine
+\item A cup and a big bowl of water for washing hands, and a towel to dry hands with
+\item A large cloth (tea towel) and a small cloth (napkin or tea towel) to wrap the matzah
+\item Two extra wine glasses or cups, one for Elijah and one for Miriam
+\item Additional items for the Seder Plate such as an Orange (LGBTQIA+) or Olives (peace in I/P)
+\item Spring Onions to whack each other with during the Dayyeinu
+\item A MEAL
+\end{itemize}
+}
 \begin{center}
 	\includegraphics[width=50mm]{Sederplate}
 	\end{center}
-
-{\color{cyan} \rule{\linewidth}{0.5mm}}
 \onecolumn
-\section{Contents}{%
-	\ContentsColumnar
-	\noindent
-}
-\onecolumn
+\section{Contents}
+\ContentsColumnar
+%\onecolumn
 %
+\vspace*{-4ex}
 \section{Neirot : Candle-lighting : Svíčky}
 
 \Neirot
@@ -109,12 +151,11 @@ blorb
 \section{Kaddeish : Cup of Sanctification: Kadeš}
 \columnratio{0.9}
 \begin{paracol}{2}
-	{\textit{Nalijte první šálek hroznové šťávy, která si pamatuje, že Bůh vysvobozuje svůj lid:}\\
+	{\textit{Nalijte první šálek hroznové šťávy, která si pamatuje, že Bůh vysvobozuje svůj lid:} \vspace*{2ex}\\
 	\color{midblue}\textit{We pour our first of four cups of grape juice or wine, which symbolise the continuity of G-d's promises to His people. This first cup reminds us that G-d 'Will Bring us Out' of difficult times:}}
 	\colseprulecolor{white}
 \end{paracol}
 \Kaddeish
-\onecolumn
 \textit{Říkáme společně:}
 \\
 \color{midblue}\textit{We celebrate our chance to experience this festival by saying the Shehechyanu:}
@@ -124,7 +165,7 @@ blorb
 	\textit{\centering \color{midblue} Now we drink (leaning left)!} \\
 	\textit{Nyní  vypijeme větší část obsahu prvního poháru, budeme se přitom levou rukou opírat.}
 	\end{center}
-
+\vspace*{2ex}
 \section{Urchatz : Handwashing : Urchac}
 \begin{center}
 	{\color{midblue} \textit{We wash our hands without a blessing}}\\
@@ -137,40 +178,48 @@ blorb
 \vspace*{-12ex}  % Tune this to the image height.
 \section{Karpas : Green Spring Herbs : Karpas}
  \Karpas
-
+\vspace*{1ex}
 \section{Yachatz: Bread of Affliction : Jachac}
 \Yachatz
-
+\vspace*{2ex}
 \section{Arba'ah : The Four : čtyři otázky a čtyři děti}
 \MaNishtana
 \FourChildrenText
 %
+\vspace*{2ex}
 \section{Maggid : The Story : Magid}
 \MaggidIntro
 \onecolumn
 \begin{center}
-	\noindent \LARGE \color{midblue} The 10 Plagues \centering
+	\noindent \large \color{midblue} The 10 Plagues \centering
 \end{center}
 \Plagues
 \onecolumn
 \begin{center}
-	\noindent \LARGE \color{midblue} Dayyeinu
+	\noindent \large \color{midblue} Dayyeinu
 \end{center}
 \Dayyeinu
 \begin{center}
-	\noindent \LARGE \color{midblue} Rabbi Gamliel's 3 Things
+	\noindent \large \color{midblue} Rabbi Gamliel's 3 Things
 \end{center}
 \Gamliel
+\vspace*{2ex}
 \begin{center}
-	\noindent \LARGE \color{midblue} Cup 2
+	\noindent \large \color{midblue} In Every Generation
+\end{center}
+\EveryGeneration
+
+\vspace*{2ex}
+%preload the image of the first cup
+\hfill\includegraphics[width=10mm]{cup}
+\vspace*{-15ex}  % Tune this to the image height.
+
+\begin{center}
+	\noindent \large \color{midblue} Cup 2
 \end{center}
 \Kaddeish
 \textit{Opřeni o levý loket vyprázdníme druhý pohár. \color{midblue}Now we drink!}
 \onecolumn
-\begin{center}
-	\noindent \LARGE \color{midblue} In Every Generation
-	\end{center}
-\EveryGenerationText
 
 \section{Rachtzah : Handwashing (Blessed) : Rachca}
 \NetilatYadayim
@@ -200,39 +249,57 @@ music should be played here}
 \Bareich
 \textit{\color{midblue} Now we drink our third cup after saying the blessing:}\\
 \color{black}
+\vspace*{1ex}
+%preload the image of the first cup
+\hfill\includegraphics[width=10mm]{cup}
+\vspace*{-15ex}  % Tune this to the image height.
+
+\begin{center}
+	\noindent \large \color{midblue} Cup 3
+\end{center}
 \Kaddeish
 
 \section{Hallel : Praise : Halel}
 \textit{\color{midblue} We listen to some music as we pour a cup of drink for Elijah and check if he is waiting outside the home}\\
 \color{black}
 \Hallel
-\Elijah (cup 5 for someone if E doesn't come!)\\
+\vspace*{2ex}
+%preload the image of the first cup
+{\hspace*{100mm} \includegraphics[width=10mm]{cup} \includegraphics[width=10mm]{cup}}
+\vspace*{-15ex}  % Tune this to the image height.
+\raggedright
+\begin{center}
+	\noindent \large \color{midblue} Cup 4
+\end{center}
+\textit{\color{midblue} Pour an extra cup this time for Elijah, and do not drink yet}
+\Kaddeish
+\vspace*{2ex}
+\Elijah \centering (cup 5 for someone if E doesn't come!)\\ \raggedright
 % 
 
 \section{Nirtzah : Conclusion : Nirca}
 \red[]{Conclusion (next year in Jerusalem)}
 \Nirtzah
 % 
-Thank you for sharing in this Festival with me.\\
+\vspace*{4ex}
+\textit{\Large Now We Drink!}
+\vspace*{\4ex}\\
+Thank you for sharing in this Festival with me.
+\vspace*{4ex}\\
 \textit{music, dancing, and games may follow}
+%\onecolumn
+%\vspace*{4ex}
+\vfill
+{\color{cyan} \rule{\linewidth}{0.5mm}}
+\vspace*{2ex}
 \begin{center}
 	{end}
 \end{center}
+\vspace*{2ex}
+{\color{cyan} \rule{\linewidth}{0.5mm}}
 
-\ChadGayahText
+%\ChadGayahText
 
-\vfill
-%
-Typeset by Sarah Morris in ten-point Palatino.  Translations from the
-MyJewishLearning.com, Danielle and Misha Slutsky at \url{https://www.recustom.com/clips/4063687}, .SOURCES, and my own.
-
-% 
-The latest version of this booklet can be found at
-\url{ https://github.com/ }. Comments?
-Suggestion? Found a mistake? Open an issue in the repository.
-% 
-
-{\centering\footnotesize\texttt{Compositum \today\ hora \currenttime}\par}
 
 \end{document}
 
