--- a/readings.tex
+++ b/readings.tex
@@ -115,23 +115,26 @@
 %
 \newcommand{\MaggidText}{%
 	{\color{midblue} G-d made many promises to Abraham:\\
-		\color{black} Bůh zaslíbil Abrahamovi
-		\vspace*{2ex}
+		\color{black} Bůh zaslíbil Abrahamovi:
+		\vspace*{4ex}
 		\\ \largehebrew{הַבֶּט־נָא הַשָּׁמַיְמָה וּסְפֹר הַכּוֹכָבִים אִם־תּוּכַל לִסְפֹּר אֹתָם וַיֹּאמֶר לוֹ כֹּה יִהְיֶה זַרְעֶךָ}\\
 		\raggedleft \color{midblue} Look toward heaven and count the stars, if you are able to count them. \\ So shall your offspring be.\\
+		\vspace*{2ex}
 		{\centering \textit{\color{black} Genesis 15:5}\\}
 		\color{black} 
 		\vspace*{4ex}
 		\largehebrew{אֲנִי יְהֹוָה אֲשֶׁר הוֹצֵאתִיךָ מֵאוּר כַּשְׂדִּים לָתֶת לְךָ אֶת־הָאָרֶץ הַזֹּאת לְרִשְׁתָּהּ}\\
 		\color{midblue} I brought you out from Ur to assign this land to you as a possession.\\
+		\vspace*{2ex}
 		{\centering \textit{\color{black} Genesis 15:7}\\}
 		\color{black}
 		\vspace*{4ex}
 		\largehebrew{יִהְיֶה זַרְעֲךָ בְּאֶרֶץ לֹא לָהֶם וַעֲבָדוּם וְעִנּוּ אֹתָם אַרְבַּע מֵאוֹת שָׁנָה...}	\\
 		\color{midblue} Your offspring shall be strangers in a foreign land, \\ and they shall be enslaved and oppressed four hundred years; \\
-		\color{black} \vspace*{1ex}
+		\color{black} \vspace*{2ex}
 		\raggedright \largehebrew{...וְגַם אֶת־הַגּוֹי אֲשֶׁר יַעֲבֹדוּ דָּן אָנֹכִי וְאַחֲרֵי־כֵן יֵצְאוּ בִּרְכֻשׁ גָּדוֹל}\\
 		\color{midblue} but I will execute judgment on the nation they shall serve, \\ and in the end they shall go free with great wealth.\\
+		\vspace*{2ex}
 		{\hspace*{0.375\textwidth} \textit{\color{black} Genesis 15: 13-14}}
 		}}
 
@@ -252,41 +255,41 @@
 			\textit{\color{darkblue}Ilu hotzianu mimitzrayim...}\\
 			\vspace*{0.25ex}
 			\largehebrew{\color{darkblue} אִלּוּ הוֹצִיאָנוּ מִמִּצְרָיִם...}\\}
-		\raggedleft{\color{midblue}...and not carried out judgments against the Egyptians...\\
-			\textit{\color{darkblue}...v'lo asah bahem sh'fatim...}\\
-			\largehebrew{\color{darkblue} וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
-		\DayyeinuRepeat \vspace*{2ex}
-		}
-		%2
-		\item{
-		\raggedright{\color{midblue} If He had carried out judgments against them...\\
-			\textit{\color{darkblue} Ilu asah bahem sh'fatim...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
-		\raggedleft{\color{midblue}...and not against their idols...\\
-			\textit{\color{darkblue}...v'lo asah beloheihem...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\}
-		\DayyeinuRepeat \vspace*{2ex}
-		}
-		%3
-		\item 
-		{\raggedright{\color{midblue}If He had destroyed their idols...\\
-			\textit{\color{darkblue}Ilu asah beloheihem...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
-		\raggedleft{\color{midblue}...and not smitten their first-born...\\
-			\textit{\color{darkblue}...v'lo harag et b'choreihem...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
-		\DayyeinuRepeat	\vspace*{2ex}
-		}
-		%4
-		\item{
-		\raggedright{\color{midblue}If He had smitten their first-born...\\
-			\textit{\color{darkblue}Ilu harag et b'choreihem...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue} אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
+%		\raggedleft{\color{midblue}...and not carried out judgments against the Egyptians...\\
+%			\textit{\color{darkblue}...v'lo asah bahem sh'fatim...}\\
+%			\largehebrew{\color{darkblue} וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
+%		\DayyeinuRepeat \vspace*{2ex}
+%		}
+%		%2
+%		\item{
+%		\raggedright{\color{midblue} If He had carried out judgments against them...\\
+%			\textit{\color{darkblue} Ilu asah bahem sh'fatim...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
+%		\raggedleft{\color{midblue}...and not against their idols...\\
+%			\textit{\color{darkblue}...v'lo asah beloheihem...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+	%	\DayyeinuRepeat \vspace*{2ex}
+%		}
+%		%3
+%		\item 
+%		{\raggedright{\color{midblue}If He had destroyed their idols...\\
+%			\textit{\color{darkblue}Ilu asah beloheihem...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+	%	\raggedleft{\color{midblue}...and not smitten their first-born...\\
+	%		\textit{\color{darkblue}...v'lo harag et b'choreihem...}\\
+	%		\vspace*{0.25ex}
+	%		\largehebrew{\color{darkblue}...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
+%		\DayyeinuRepeat	\vspace*{2ex}
+%		}
+%		%4
+%		\item{
+%		\raggedright{\color{midblue}If He had smitten their first-born...\\
+%			\textit{\color{darkblue}Ilu harag et b'choreihem...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue} אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
 		\raggedleft{\color{midblue}...and not given us their wealth...\\		
 			\textit{\color{darkblue}...v'lo natan lanu et mamonam...}\\
 			\vspace*{0.25ex}
@@ -311,30 +314,30 @@
 			\textit{\color{darkblue}Ilu kara lanu et hayam...}\\
 			\vspace*{0.25ex}
 			\largehebrew{\color{darkblue}אִלּוּ קָרַע לָנוּ אֶת הַיָּם...}\\}
-		\raggedleft{\color{midblue}...and not taken us through it on dry land...\\
-			\textit{\color{darkblue}...v'lo he'eviranu b'tocho becharavah...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
-		\DayyeinuRepeat	\vspace*{2ex}
-		}
-		%7
-		\item{
-		\raggedright{\color{midblue}If He had taken us through the sea on dry land...\\
-			\textit{\color{darkblue}Ilu he'eviranu b'tocho becharavah...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
-		\raggedleft{\color{midblue}...and not drowned our oppressors in it...\\
-			\textit{\color{darkblue}...v'lo shika tzareinu b'tocho...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
-		\DayyeinuRepeat	\vspace*{2ex}
-		}
-		%8		
-		\item{
-		\raggedright{\color{midblue}If He had drowned our oppressors in it...\\
-			\textit{\color{darkblue}Ilu shika tzareinu b'tocho...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+%		\raggedleft{\color{midblue}...and not taken us through it on dry land...\\
+%			\textit{\color{darkblue}...v'lo he'eviranu b'tocho becharavah...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}...וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+	%	\DayyeinuRepeat	\vspace*{2ex}
+	%	}
+	%	%7
+	%	\item{
+	%	\raggedright{\color{midblue}If He had taken us through the sea on dry land...\\
+	%		\textit{\color{darkblue}Ilu he'eviranu b'tocho becharavah...}\\
+	%		\vspace*{0.25ex}
+	%		\largehebrew{\color{darkblue}אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+%		\raggedleft{\color{midblue}...and not drowned our oppressors in it...\\
+%			\textit{\color{darkblue}...v'lo shika tzareinu b'tocho...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}...וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+	%	\DayyeinuRepeat	\vspace*{2ex}
+	%	}
+	%	%8		
+	%	\item{
+%		\raggedright{\color{midblue}If He had drowned our oppressors in it...\\
+%			\textit{\color{darkblue}Ilu shika tzareinu b'tocho...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
 		\raggedleft{\color{darkblue}...and not cared for us in the desert for 40 years...\\
 			\textit{\color{darkblue}...v'lo sipeik tzorkeinu bamidbar arba'im shana...}\\
 			\vspace*{0.25ex}
@@ -371,18 +374,17 @@
 			\textit{\color{darkblue}Ilu natan lanu et hashabbat...}\\
 			\vspace*{0.25ex}
 			\largehebrew{\color{darkblue}אִלּוּ נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
-		\raggedleft{\color{midblue}...and not brought us before Mount Sinai...\\
-			\textit{\color{darkblue}...v'lo keirvanu lifnei har sinai...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
-		\DayyeinuRepeat	\vspace*{2ex}
-		}
-		%12	
-		\item{ 
-		\raggedright{\color{midblue}If He had brought us before Mount Sinai...\\
-			\textit{\color{darkblue}Ilu keirvanu lifnei har sinai...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+%		\raggedleft{\color{midblue}...and not brought us before Mount Sinai...\\
+%			\textit{\color{darkblue}...v'lo keirvanu lifnei har sinai...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}...וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+	%	\DayyeinuRepeat	\vspace*{2ex}
+	%	}
+	%	%12	
+	%	\item{ 
+	%		\textit{\color{darkblue}Ilu keirvanu lifnei har sinai...}\\
+	%		\vspace*{0.25ex}
+	%		\largehebrew{\color{darkblue}אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
 		\raggedleft{\color{midblue}...and not given us the Torah...\\
 			\textit{\color{darkblue}...v'lo natan lanu et hatorah...}\\
 			\vspace*{0.25ex}
@@ -390,28 +392,24 @@
 		\DayyeinuRepeat	\vspace*{2ex}
 		}	
 		%13
-		\item{
-		\raggedright{\color{midblue}If He had given us the Torah...\\
-			\textit{\color{darkblue}Ilu natan lanu et hatorah...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}אִלּוּ נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
-		\raggedleft{...and not brought us into the land of Israel...\\
-			\textit{\color{darkblue}...v'lo hichnisanu l'eretz yisra'eil...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
-		\DayyeinuRepeat	\vspace*{2ex}
-		}
-		%14
-		\item{
-		\raggedright{\color{midblue}If He had brought us into the land of Israel...\\
-			\textit{\color{darkblue}Ilu hichnisanu l'eretz yisra'eil...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
-		\raggedleft{\color{midblue}...and not built for us the Holy Temple...\\
-			\textit{\color{darkblue}...v'lo vanah lanu et beit hamikdash...}\\
-			\vspace*{0.25ex}
-			\largehebrew{\color{darkblue}...וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ...}\\}
-		\DayyeinuRepeat}	
+%		\item{
+%		\raggedright{\color{midblue}If He had given us the Torah...\\
+%			\textit{\color{darkblue}Ilu natan lanu et hatorah...}\\
+%	\raggedleft{...and not brought us into the land of Israel...\\
+%			\textit{\color{darkblue}...v'lo hichnisanu l'eretz yisra'eil...}\\
+%			\largehebrew{\color{darkblue}...וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\
+%		\DayyeinuRepeat	\vspace*{2ex}
+%		}
+%		%14
+%		\item{
+%		\raggedright{\color{midblue}If He had brought us into the land of Israel...\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
+%		\raggedleft{\color{midblue}...and not built for us the Holy Temple...\\
+%			\textit{\color{darkblue}...v'lo vanah lanu et beit hamikdash...}\\
+%			\vspace*{0.25ex}
+%			\largehebrew{\color{darkblue}...וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ...}\\}
+	%	\DayyeinuRepeat}	
 	\end{enumerate} %Danielle and Misha Slutsky, https://www.recustom.com/clips/4063687.
 }
 
@@ -430,8 +428,9 @@
 \vspace*{1mm}\\
 \textit{B’chol dor vador chayav adam lirot et-atzmo, k’ilu hu yatzav mimitzrayim.}\\
 \vspace*{2ex}
+\onecolumn
 	\begin{multicols}{2}
-	\nopagebreak \color{black} \raggedright {large V každém pokolení je povinností každého Žida vidět sama sebe, jako 
+	\nopagebreak \color{black} \raggedright {V každém pokolení je povinností každého Žida vidět sama sebe, jako 
 		by on sám vyšel z Egypta,} jak je řečeno: „Tohoto dne pověz svému synu, 
 	aby říkal: Jelikož tohle učinil Hospodin mně při mém východu z Egypta.“ 
 	Bože náš, jemuž žehnáme, nevykoupil pouze naše předky, ale s nimi 
@@ -470,10 +469,11 @@
 }
 
 \newcommand{\ElijahText}{
-	\color{midblue} \textit{\centering Pour Elijah's cup of wine.\\
-		We go and open the door and call three times:}\\
+	\color{midblue} \textit{\centering We go and open the door and call three times:}\\
+	\vspace*{2ex}
 	\centering 'Eliyahu! Eliyahu! Eliyahu!'\\
-	\textit{to welcome Elijah, protector of souls and herald of the messianic age of peace, into our festival. \\ If there is a neighbour, friend, or stranger who answers the cry, we welcome them with a blessing and a hot meal, because at the heart of the Pesach message is an awareness of our own ancestors' hardship which should spill forth in our kindness to each other and to strangers today:}}
+	\vspace*{2ex}
+	\textit{to welcome Elijah, protector of souls and herald of the messianic age of peace, into our festival. \vspace*{2ex} \\ If there is a neighbour, friend, or stranger who answers the cry, we welcome them with a blessing and a hot meal, because at the heart of the Pesach message is an awareness of our own ancestors' hardship which should spill forth in our kindness to each other and to strangers today:}}
 	
 \newcommand{\StrangersText}{
 	\color{black} \hugehebrew{וְגֵר לֹא תִלְחָץ וְאַתֶּם יְדַעְתֶּם אֶת־נֶפֶשׁ הַגֵּר כִּי־גֵרִים הֱיִיתֶם בְּאֶרֶץ מִצְרָיִם}\\
@@ -487,6 +487,7 @@
 	בִּמְהֵרָה בְיָמֵינוּ, יָבֹא אֵלֵינוּ,
 	 עִם מָשִׁיחַ בֶּן דָּוִד, עִם מָשִׁיחַ בֶּן דָּוִד} \\
 	 \raggedright
+	 \vspace*{2ex}
 	 \vspace*{2ex}
 	 \columnratio{0.5,0.5}
 	 \begin{paracol}{2}
